# PCBBuilder

./: .gitattributes  .gitignore  CMakeLists.txt  README-CN.md  README.md
Graffiti/: CMakeLists.txt  Graffiti.h  gfpch.h
Graffiti/Graffiti/: EntryPoint.h
Graffiti/Graffiti/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Graffiti/Graffiti/Graphic/Opengl/: OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenglBuffer.cpp  OpenglBuffer.h  OpenglContext.cpp  OpenglContext.h  OpenglRenderAPI.cpp  OpenglRenderAPI.h  OpenglShader.cpp  OpenglShader.h  OpenglTexture.cpp  OpenglTexture.h  OpenglVertexArray.cpp  OpenglVertexArray.h
Graffiti/Graffiti/Graphic/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderAPI.cpp  VulkanRenderAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertexArray.cpp  VulkanVertexArray.h
Graffiti/Graffiti/ImGui/: imgui_impl_vulkan.cpp
Graffiti/Graffiti/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Graffiti/Graffiti/Render/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Graffiti/Graffiti/Scene/: Model.cpp  Model.h  SceneData.cpp  SceneData.h  Vertex.h
Graffiti/Graffiti/base/: Application.cpp  Application.h  Camera.cpp  Camera.h  CameraControl.cpp  CameraControl.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.h  KMCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  ModelLibrary.cpp  ModelLibrary.h  OrthoCamera.cpp  OrthoCamera.h  PipeLineState.h  Texture.cpp  Texture.h  TimeStep.h  Window.cpp  Window.h  core.h
Models/: t1.txt
PCB3D/: CMakeLists.txt  verify.hpp
PCB3D/CDT/: CDTUtils.h  Triangulation.h  Triangulation.hpp
PCB3D/math/: float.hpp  vec2.hpp  vec3.hpp
PCB3D/pcb/: base.hpp  board.hpp  layer.hpp  layer_builder.cpp  layer_builder.hpp  layer_lexer.cpp  layer_lexer.hpp  layer_lexer_mem.cpp  layer_parser.cpp  layer_parser.hpp  line.hpp  segment.hpp  shape.hpp  sync_queue.hpp  trail.hpp  verify.cpp  writer.cpp  writer.hpp
PCB3D/pcb3d/: builder3d.cpp  builder3d.hpp  layer3d.cpp  layer3d.hpp  pcbedge.cpp  pcbedge.hpp  pcbexception.hpp  pcbface.cpp  pcbface.hpp  pcbshell.cpp  pcbshell.hpp  stepwriter.cpp  stepwriter.hpp  trail3d.cpp  trail3d.hpp  triangulation.cpp  triangulation.hpp
Shaders/OpenGL/Hybrid/: CircleLet.frag  CircleLet.mesh  CircleLet.task  LineLet.frag  LineLet.mesh  LineLet.task
Shaders/OpenGL/Standard/: Standard.frag  Standard.vert
Shaders/Vulkan/: compile.bat
Shaders/Vulkan/Hybrid/: CircleLet.frag  CircleLet.mesh  CircleLet.task  LineLet.frag  LineLet.mesh  LineLet.task
Shaders/Vulkan/Standard/: Standard.frag  Standard.vert
src/: BuildGPU.cpp  BuildGPU.hpp  CMakeLists.txt  PCBLayer.cpp  PCBLayer.hpp  PCBLoader.cpp  PCBLoader.hpp  base.hpp  main.cpp
